added test for comments endpoint. Changed /posts -> get so now it take pagination parameters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,7 @@ slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost/Eva"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = "1234"
+slick.dbs.default.db.queueSize = 5000
 
 # Evolutions
 # ~~~~~
